# developer_utilities

./: .gitignore  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ottili-coder.yml
.ottili-coder/plans/: developer-utilities-blueprint.md
services/developer_utilities/: Dockerfile  LICENSE  README.md  SECURITY.md  pyproject.toml
services/developer_utilities/app/: api_keys.py  config.py  core.py  main.py  rate_limit.py  response.py  store.py
services/developer_utilities/app/providers/: open_meteo.py
services/developer_utilities/app/routers/: calc.py  debug.py  encoding.py  hash.py  json_tools.py  keys.py  qr.py  random.py  text.py  time.py  units.py  weather.py
services/developer_utilities/services/: __init__.py
services/developer_utilities/services/developer_utilities/: __init__.py
services/developer_utilities/services/developer_utilities/app/: __init__.py  api_keys.py  config.py  main.py  rate_limit.py  response.py
services/developer_utilities/services/developer_utilities/app/providers/: open_meteo.py
services/developer_utilities/tests/: test_api.py  test_app.py
