[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "developer-utilities"
version = "0.1.0"
description = "Ottili Developer Utilities"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115,<1",
  "httpx>=0.27,<1",
  "redis>=5,<6",
  "segno>=1.6,<2",
  "uvicorn[standard]>=0.30,<1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8,<9",
  "pytest-asyncio>=0.23,<1",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["services*"]

[tool.pytest.ini_options]
testpaths = ["services/developer_utilities/tests"]
asyncio_mode = "auto"
