[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "developer-utilities"
version = "0.1.0"
description = "Ottili Developer Utilities v0.1"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "Apache-2.0"}
authors = [{name = "Ottili ONE"}]
dependencies = [
  "fastapi>=0.115,<1",
  "uvicorn[standard]>=0.30,<1",
  "httpx>=0.27,<1",
  "segno>=1.6,<2",
  "redis>=5.0,<6",
]

[project.optional-dependencies]
dev = [
  "pytest>=8,<9",
  "pytest-asyncio>=0.23,<1",
]

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
include = ["services*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
